[package]
name = "maze-rs"
version = "0.9.0"
authors = ["fiburonsk <10441670+fiburonsk@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rand = "0.7.2"

[dependencies.clap]
version = "2.33.0"
default-features = false

[dependencies.image]
version = "0.22.2"
features = ["png"]

[[bin]]
name = "maze"
path = "src/main.rs"
