[package]
name = "cli"
version = "0.9.1"
authors = ["fiburonsk <10441670+fiburonsk@users.noreply.github.com>"]
edition = "2018"

[dependencies]
argh = "0.1.4"
rand = "0.7.3"
maze = { path = "../maze" }
image = { version = "0.23.1", default-features=false, features=["png"] }

[[bin]]
name = "maze"
path = "src/main.rs"
